--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,7 +1,7 @@
-APP_PORT=6000
-FRONTEND_URL=http://localhost:3000
+APP_PORT=8000
+FRONTEND_URL=http://localhost:5173
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=notroot
-DB_PASSWORD=helloworld
-DB_NAME=mvc_express
+DB_USER=YOUR_USERNAME
+DB_PASSWORD=YOUR_PASSWORD
+DB_NAME=YOUR_DB_NAME
