display favorites and star display

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "@material/tooltip": "^14.0.0",
     "@vitejs/plugin-react": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
+    "react-tooltip": "^5.18.0",
     "sass": "^1.63.2",
     "vite": "^4.0.4"
   },
