--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.11.2",
     "react-tooltip": "^5.18.0",
     "sass": "^1.63.2",
+    "socket.io-client": "^4.7.1",
     "vite": "^4.0.4"
   },
   "devDependencies": {
