--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.0.1",
-    "socket.io": "^4.7.1",
-    "uniqid": "^5.4.0"
+    "mysql2": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
