--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,3 +1,4 @@
 # call it in React with import.meta.env.VITE_BACKEND_URL
 VITE_BACKEND_URL=http://localhost:8000
+VITE_ASSETS_IMAGES_URL=YOUR_PATH_FOR_IMAGES
 
