just started the send mail functionality, have to pull dev

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -6,3 +6,9 @@ DB_PORT=3306
 DB_USER=YOUR_USERNAME
 DB_PASSWORD=YOUR_PASSWORD
 DB_NAME=YOUR_DB_NAME
+
+SMTP_SENDIN=YOUR_SMTP_SENDIN
+SMTP_PORT_SENDIN=YOUR_SMTP_PORT_SENDIN
+SMTP_SENDIN_USER=YOUR_SMTP_SENDIN_USER
+SMTP_SENDIN_PASSWORD=YOUR_SMTP_SENDIN_PASSWORD
+MAIL_RECEIVER=YOUR_EMAIL_ADDRESS
