Send mail from favorites arts into your account

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -12,3 +12,4 @@ SMTP_PORT_SENDIN=YOUR_SMTP_PORT_SENDIN
 SMTP_SENDIN_USER=YOUR_SMTP_SENDIN_USER
 SMTP_SENDIN_PASSWORD=YOUR_SMTP_SENDIN_PASSWORD
 MAIL_RECEIVER=YOUR_EMAIL_ADDRESS
+SMTP_SECURE=false
